--- a/css/registration.css
+++ b/css/registration.css
@@ -409,7 +409,7 @@ b {
     display: block;
     font-size: 30px;
     cursor: pointer;
-    color: white;
+    color: black;
   }
 
   .off-screen-menu {
